objects/SVOrderDetail__c.object
<CustomObject>
    <description>Custom order details</description>
    <fields>
        <fullName>Order_Create_Date__c</fullName>
        <label>Order Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <label>Order Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Item_Id__c</fullName>
        <label>Order Item Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <label>Product SKU</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Quantity__c</fullName>
        <label>Sold Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SV Order Detail</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SV Order Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>